GNOME Bugzilla – Bug 766175
Translation of quotes may misinterpreted by GTK sidebar
Last modified: 2016-05-11 01:48:58 UTC
In gtk/gtkplacesidebar.c, translating the string 'Mount and open “%s”' using '\"' (instead of “ and ”) results in displaying 'quot;' where it'd be expected a double quotes character '"'. e.g. In pt_BR, we translated it as "Monta e abre \"%s\"" and an user spotted "Monta e abre "foo-bar@gnome.org"" Please allow other quotes character in this string or, alternatively, add a comment for the translation to NOT change the quotes character.
add_place() is wrong in escaping the translated string. If something needs escaping, it is the volume name, and that needs to happen before the g_strdup_printf puts it into the translated string
Actually, no. It should be fine. And I can't reproduce the problem you describe: \" works just fine here, in tooltips on the places sidebar